==> salara1960/stm32_esp32_can/esp_can+/main/ssd1306.c <==
#include "hdr.h"
#include "main.h"
#define SDA_PIN GPIO_NUM_21//13 //15
#define SCL_PIN GPIO_NUM_22//14 //2
#define SSD1306_PORT I2C_NUM_0
#define I2C_CLOCK_HZ 800000 //800KHz //400000 //400KHz //1600000 - 1.6MHz  -> WORK !!!

esp_err_t ssd1306_on(bool flag)
{
i2c_cmd_handle_t cmd = i2c_cmd_link_create();
uint8_t bt;
esp_err_t ret = ESP_FAIL;

    if (flag) bt = OLED_CMD_DISPLAY_ON; else bt = OLED_CMD_DISPLAY_OFF;

    if (xSemaphoreTake(lcd_mutex, portMAX_DELAY) == pdTRUE) {

        i2c_master_start(cmd);
        i2c_master_write_byte(cmd, (OLED_I2C_ADDRESS << 1) | I2C_MASTER_WRITE, true);
        i2c_master_write_byte(cmd, OLED_CONTROL_BYTE_CMD_SINGLE, true);
        i2c_master_write_byte(cmd, bt, true);
        i2c_master_stop(cmd);
        ret = i2c_master_cmd_begin(SSD1306_PORT, cmd, 20/portTICK_PERIOD_MS);
        i2c_cmd_link_delete(cmd);

        xSemaphoreGive(lcd_mutex);
    }

    if (ret != ESP_OK) {
        if (flag) {
            ESP_LOGE(TAG_OLED, "[%s] Display ON ERROR ! (0x%.2X)", __func__, ret);
        } else {
            ESP_LOGE(TAG_OLED, "[%s] Display OFF ERROR ! (0x%.2X)", __func__, ret);
        }
    }

    return ret;
}

esp_err_t ssd1306_init()
{
esp_err_t ret = ESP_FAIL;
i2c_cmd_handle_t cmd = i2c_cmd_link_create();

    if (xSemaphoreTake(lcd_mutex, portMAX_DELAY) == pdTRUE) {

        i2c_master_start(cmd);
        i2c_master_write_byte(cmd, (OLED_I2C_ADDRESS << 1) | I2C_MASTER_WRITE, true);
        i2c_master_write_byte(cmd, OLED_CONTROL_BYTE_CMD_STREAM, true);

        i2c_master_write_byte(cmd, OLED_CMD_SET_CHARGE_PUMP, true);
        i2c_master_write_byte(cmd, 0x14, true);

        i2c_master_write_byte(cmd, OLED_CMD_SET_SEGMENT_REMAP, true); // reverse left-right mapping
        i2c_master_write_byte(cmd, OLED_CMD_SET_COM_SCAN_MODE, true); // reverse up-bottom mapping

        i2c_master_write_byte(cmd, OLED_CMD_SET_COLUMN_RANGE, true);
        i2c_master_write_byte(cmd, 0x00, true);
        i2c_master_write_byte(cmd, 0x7F, true);
        i2c_master_write_byte(cmd, OLED_CMD_SET_PAGE_RANGE, true);
        i2c_master_write_byte(cmd, 0x00, true);
        i2c_master_write_byte(cmd, 0x07, true);

        i2c_master_write_byte(cmd, OLED_CMD_DISPLAY_ON, true);

        i2c_master_write_byte(cmd, invert, true);//OLED_CMD_DISPLAY_INVERTED       0xA7

        i2c_master_stop(cmd);
        ret = i2c_master_cmd_begin(SSD1306_PORT, cmd, 20/portTICK_PERIOD_MS);
        i2c_cmd_link_delete(cmd);

        xSemaphoreGive(lcd_mutex);
    }

    if (ret != ESP_OK) {
        ESP_LOGE(TAG_OLED, "[%s] Display configuration failed. code: 0x%.2X", __func__, ret);
    }

    return ret;
}

void ssd1306_invert()
{
    if (invert == OLED_CMD_DISPLAY_INVERTED) invert = OLED_CMD_DISPLAY_NORMAL;
                                        else invert = OLED_CMD_DISPLAY_INVERTED;

    if (xSemaphoreTake(lcd_mutex, portMAX_DELAY) == pdTRUE) {

        i2c_cmd_handle_t cmd = i2c_cmd_link_create();
        i2c_master_start(cmd);
        i2c_master_write_byte(cmd, (OLED_I2C_ADDRESS << 1) | I2C_MASTER_WRITE, true);
        i2c_master_write_byte(cmd, OLED_CONTROL_BYTE_CMD_SINGLE, true);
        i2c_master_write_byte(cmd, invert, true);
        i2c_master_stop(cmd);
        i2c_master_cmd_begin(SSD1306_PORT, cmd, 20/portTICK_PERIOD_MS);
        i2c_cmd_link_delete(cmd);

        xSemaphoreGive(lcd_mutex);
    }
}

void ssd1306_clear()
{
i2c_cmd_handle_t cmd;
uint8_t i, zero[128] = {0};

    if (xSemaphoreTake(lcd_mutex, portMAX_DELAY) == pdTRUE) {

        for (i = 0; i < 8; i++) {
            cmd = i2c_cmd_link_create();
            i2c_master_start(cmd);

            i2c_master_write_byte(cmd, (OLED_I2C_ADDRESS << 1) | I2C_MASTER_WRITE, true);
            i2c_master_write_byte(cmd, OLED_CONTROL_BYTE_CMD_SINGLE, true);
            i2c_master_write_byte(cmd, 0xB0 | i, true);

            i2c_master_write_byte(cmd, OLED_CONTROL_BYTE_DATA_STREAM, true);
            i2c_master_write(cmd, zero, sizeof(zero), true);

            i2c_master_stop(cmd);
            i2c_master_cmd_begin(SSD1306_PORT, cmd, 16/portTICK_PERIOD_MS);
            i2c_cmd_link_delete(cmd);
        }

        xSemaphoreGive(lcd_mutex);
    }
}

void ssd1306_pattern()
{
i2c_cmd_handle_t cmd;
uint8_t i, j;

    if (xSemaphoreTake(lcd_mutex, portMAX_DELAY) == pdTRUE) {

        for (i = 0; i < 8; i++) {
            cmd = i2c_cmd_link_create();
            i2c_master_start(cmd);

            i2c_master_write_byte(cmd, (OLED_I2C_ADDRESS << 1) | I2C_MASTER_WRITE, true);
            i2c_master_write_byte(cmd, OLED_CONTROL_BYTE_CMD_SINGLE, true);
            i2c_master_write_byte(cmd, 0xB0 | i, true);
            i2c_master_write_byte(cmd, OLED_CONTROL_BYTE_DATA_STREAM, true);
            for (j = 0; j < 128; j++) i2c_master_write_byte(cmd, 0xFF >> (j % 8), true);

            i2c_master_stop(cmd);
            i2c_master_cmd_begin(SSD1306_PORT, cmd, 10/portTICK_PERIOD_MS);
            i2c_cmd_link_delete(cmd);
        }

        xSemaphoreGive(lcd_mutex);
    }
}

void ssd1306_contrast(uint8_t value)//0xff or 0x00
{
    if (xSemaphoreTake(lcd_mutex, portMAX_DELAY) == pdTRUE) {

        i2c_cmd_handle_t cmd = i2c_cmd_link_create();
        i2c_master_start(cmd);

        i2c_master_write_byte(cmd, (OLED_I2C_ADDRESS << 1) | I2C_MASTER_WRITE, true);
        i2c_master_write_byte(cmd, OLED_CONTROL_BYTE_CMD_STREAM, true);
        i2c_master_write_byte(cmd, OLED_CMD_SET_CONTRAST, true);
        i2c_master_write_byte(cmd, value, true);

        i2c_master_stop(cmd);
        i2c_master_cmd_begin(SSD1306_PORT, cmd, 20/portTICK_PERIOD_MS);
        i2c_cmd_link_delete(cmd);

        xSemaphoreGive(lcd_mutex);
    }
}

void ssd1306_text_xy(const char *stroka, uint8_t cx, uint8_t cy)
{

uint8_t i, lin = cy - 1, col = cx - 1, len = strlen(stroka);
i2c_cmd_handle_t cmd;

    if (xSemaphoreTake(lcd_mutex, portMAX_DELAY) == pdTRUE) {

        cmd = i2c_cmd_link_create();
        i2c_master_start(cmd);
        i2c_master_write_byte(cmd, (OLED_I2C_ADDRESS << 1) | I2C_MASTER_WRITE, true);

        i2c_master_write_byte(cmd, OLED_CONTROL_BYTE_CMD_STREAM, true);

        i2c_master_write_byte(cmd, OLED_CMD_SET_COLUMN_RANGE, true);
        i2c_master_write_byte(cmd, col * 8, true);
        i2c_master_write_byte(cmd, 0x7F, true);
        i2c_master_write_byte(cmd, OLED_CMD_SET_PAGE_RANGE, true);
        i2c_master_write_byte(cmd, lin, true);
        i2c_master_write_byte(cmd, 0x07, true);

        i2c_master_stop(cmd);
        i2c_master_cmd_begin(SSD1306_PORT, cmd, 10/portTICK_PERIOD_MS);
        i2c_cmd_link_delete(cmd);

        for (i = 0; i < len; i++) {
            cmd = i2c_cmd_link_create();
            i2c_master_start(cmd);

            i2c_master_write_byte(cmd, (OLED_I2C_ADDRESS << 1) | I2C_MASTER_WRITE, true);
            if (stroka[i] == '\n') {
                i2c_master_write_byte(cmd, OLED_CONTROL_BYTE_CMD_STREAM, true);
                i2c_master_write_byte(cmd, 0x00, true); // reset column
                i2c_master_write_byte(cmd, 0x10, true);//0x10
                i2c_master_write_byte(cmd, 0xB0 | ++lin, true); // increment page
            } else {
                i2c_master_write_byte(cmd, OLED_CONTROL_BYTE_DATA_STREAM, true);
                i2c_master_write(cmd, font8x8[(uint8_t)stroka[i]], 8, true);
            }

            i2c_master_stop(cmd);
            i2c_master_cmd_begin(SSD1306_PORT, cmd, 10/portTICK_PERIOD_MS);
            i2c_cmd_link_delete(cmd);
        }

        xSemaphoreGive(lcd_mutex);
    }

}
