==> salara1960/stm32_esp32_can/stm32/stm32f103_can+/Src/ssd1306.c <==
#include "ssd1306.h"

void ssd1306_on(bool flag)
{
uint8_t dat[] = {OLED_CONTROL_BYTE_CMD_SINGLE, 0};
HAL_StatusTypeDef rt = HAL_OK;

    if (flag) dat[1] = OLED_CMD_DISPLAY_ON;
    	 else dat[1] = OLED_CMD_DISPLAY_OFF;

    if (waitEvent() == osOK) {
#ifdef SET_OLED_SPI
    	rt = spi_ssd1306_WriteCmds(dat, sizeof(dat));
#endif
#ifdef SET_OLED_I2C
    	rt = HAL_I2C_Master_Transmit(portSSD, OLED_I2C_ADDRESS, dat, sizeof(dat), min_wait_ms);
#endif
    	doneEvent();
    }

    i2cError = rt;
    if (i2cError) errLedOn(__func__);
}

void ssd1306_init()
{
uint8_t dat[] = {
	OLED_CONTROL_BYTE_CMD_STREAM,//0x00
	OLED_CMD_SET_CHARGE_PUMP,    //0x8D
	0x14,
	OLED_CMD_SET_SEGMENT_REMAP,  //0xA1
	OLED_CMD_SET_COM_SCAN_MODE,  //0xC8
	OLED_CMD_SET_COLUMN_RANGE,   //0x21
	0x00,
	0x7F,
	OLED_CMD_SET_PAGE_RANGE,     //0x22
	0x00,
	0x07,
	OLED_CMD_DISPLAY_ON,         //0xAF
	invert
};
HAL_StatusTypeDef rt = HAL_OK;

	if (waitEvent() == osOK) {
#ifdef SET_OLED_SPI
		rt = spi_ssd1306_WriteCmds(dat, sizeof(dat));
#endif
#ifdef SET_OLED_I2C
		rt = HAL_I2C_Master_Transmit(portSSD, OLED_I2C_ADDRESS, dat, sizeof(dat), min_wait_ms);
#endif
		doneEvent();
	}

	i2cError = rt;
	if (i2cError) errLedOn(__func__);
}

void ssd1306_invert()
{
uint8_t dat[] = {OLED_CONTROL_BYTE_CMD_SINGLE, 0};
HAL_StatusTypeDef rt = HAL_OK;


    if (invert == OLED_CMD_DISPLAY_INVERTED) invert = OLED_CMD_DISPLAY_NORMAL;
										else invert = OLED_CMD_DISPLAY_INVERTED;
    dat[1] = invert;

    if (waitEvent() == osOK) {
#ifdef SET_OLED_SPI
    	rt = spi_ssd1306_WriteCmds(dat, sizeof(dat));
#endif
#ifdef SET_OLED_I2C
    	rt = HAL_I2C_Master_Transmit(portSSD, OLED_I2C_ADDRESS, dat, sizeof(dat), min_wait_ms);
#endif
    	doneEvent();
    }

    i2cError = rt;
    if (i2cError) errLedOn(__func__);
}

void ssd1306_clear()
{
uint8_t i, dat[] = {OLED_CONTROL_BYTE_CMD_SINGLE, 0};
HAL_StatusTypeDef rt = HAL_OK;
uint8_t zero[129] = {0};

	zero[0] = OLED_CONTROL_BYTE_DATA_STREAM;
	if ( waitEvent()== osOK) {
		for (i = 0; i < 8; i++) {
			dat[1] = 0xB0 | i;
#ifdef SET_OLED_SPI
			rt  = spi_ssd1306_WriteCmds(dat, sizeof(dat));
			rt |= spi_ssd1306_WriteData((const char *)zero, sizeof(zero), 0);
#endif
#ifdef SET_OLED_I2C
			rt  = HAL_I2C_Master_Transmit(portSSD, OLED_I2C_ADDRESS, dat,    2, min_wait_ms);
			rt |= HAL_I2C_Master_Transmit(portSSD, OLED_I2C_ADDRESS, zero, 129, max_wait_ms);
#endif
		}
		doneEvent();
	}

    i2cError = rt;
    if (i2cError) errLedOn(__func__);
}

void ssd1306_pattern()
{
uint8_t i, dat[] = {OLED_CONTROL_BYTE_CMD_SINGLE, 0};
uint8_t buf[129] = {0};
HAL_StatusTypeDef rt = HAL_OK;

	buf[0] = OLED_CONTROL_BYTE_DATA_STREAM;
	for (i = 1; i < 129; i++) buf[i] = 0xFF >> (i % 8);
	if (waitEvent() == osOK) {
		for (i = 0; i < 8; i++) {
			dat[1] = 0xB0 | i;
#ifdef SET_OLED_SPI
			rt  = spi_ssd1306_WriteCmds(dat, sizeof(dat));
			rt |= spi_ssd1306_WriteData((const char *)buf, sizeof(buf), 0);
#endif
#ifdef SET_OLED_I2C
			rt  = HAL_I2C_Master_Transmit(portSSD, OLED_I2C_ADDRESS, dat,   2, min_wait_ms);
			rt |= HAL_I2C_Master_Transmit(portSSD, OLED_I2C_ADDRESS, buf, 129, max_wait_ms);
#endif
		}
		doneEvent();
	}

    i2cError = rt;
    if (i2cError) errLedOn(__func__);
}

void ssd1306_contrast(uint8_t value)//0xff or 0x00
{
uint8_t dat[] = {OLED_CONTROL_BYTE_CMD_STREAM, OLED_CMD_SET_CONTRAST, value};
HAL_StatusTypeDef rt = HAL_OK;

	if (waitEvent() == osOK) {
#ifdef SET_OLED_SPI
		rt = spi_ssd1306_WriteCmds(dat, sizeof(dat));
#endif
#ifdef SET_OLED_I2C
		rt = HAL_I2C_Master_Transmit(portSSD, OLED_I2C_ADDRESS, dat, sizeof(dat), min_wait_ms);
#endif
		doneEvent();
	}

    i2cError = rt;
    if (i2cError) errLedOn(__func__);
}

void ssd1306_text_xy(const char *stroka, uint8_t cx, uint8_t cy)
{
HAL_StatusTypeDef rt = HAL_OK;
uint8_t i, lin = cy - 1, col = cx - 1;
int len = strlen(stroka);
uint8_t dat[] = {OLED_CONTROL_BYTE_CMD_STREAM, 0, 0x10, 0};
uint8_t cif[] = {OLED_CONTROL_BYTE_DATA_STREAM, 0, 0, 0, 0, 0, 0, 0, 0};
uint8_t first[] = {
	OLED_CONTROL_BYTE_CMD_STREAM,
	OLED_CMD_SET_COLUMN_RANGE,
	col << 3,
	0x7f,
	OLED_CMD_SET_PAGE_RANGE,
	lin,
	7
};

	if (waitEvent() == osOK) {
#ifdef SET_OLED_I2C
		rt = HAL_I2C_Master_Transmit(portSSD, OLED_I2C_ADDRESS, first, sizeof(first), min_wait_ms);
		if (rt == HAL_OK) {
			/*dat[0] = OLED_CONTROL_BYTE_CMD_STREAM;
			dat[1] = 0;
			dat[2] = 0x10;
			dat[3] = 0;*/
			for (i = 0; i < len; i++) {
				if (stroka[i] == '\n') {
					dat[3] = 0xB0 | ++lin;
					rt = HAL_I2C_Master_Transmit(portSSD, OLED_I2C_ADDRESS, dat, sizeof(dat), min_wait_ms);
				} else {
					memcpy(&cif[1], &font8x8[(uint8_t)stroka[i]][0], 8);
					rt = HAL_I2C_Master_Transmit(portSSD, OLED_I2C_ADDRESS, cif, sizeof(cif), max_wait_ms);
				}
			}
		}
#endif
#ifdef SET_OLED_SPI
		lin = cy - 1;
		rt = spi_ssd1306_WriteCmds(first, sizeof(first));
		/*dat[0] = OLED_CONTROL_BYTE_CMD_STREAM;
		dat[1] = 0;
		dat[2] = 0x10;
		dat[3] = 0;*/
		for (i = 0; i < len; i++) {
			if (stroka[i] == '\n') {
				dat[3] = 0xB0 | ++lin;
				rt |= spi_ssd1306_WriteCmds(dat, sizeof(dat));
			} else {
				memcpy(&cif[1], &font8x8[(uint8_t)stroka[i]][0], 8);
				rt |= spi_ssd1306_WriteCmds(cif, 1);
				rt |= spi_ssd1306_WriteData((const char *)&cif[1], sizeof(cif) - 1, true);
			}
		}
#endif
		doneEvent();
	}

    i2cError = rt;
    if (i2cError) errLedOn(__func__);
}
